lldpd (0.7.12)
  * Fix:
    + Don't complain when parsing a commented line.
    + Correctly persist configuration changes for "system interface
      promiscuous", "system interface description" "med fast-start
      enable", "pause" and "resume".
    + Fix listening on bond devices for old kernels (< 2.6.27).

lldpd (0.7.11)
  * Features:
    + Ship bash and zsh completion.
    + Abort when some command-line options are repeated.
  * Fix:
    + Handle correctly read failures in liblldpctl.

lldpd (0.7.10)
  * Features:
    + Ability to set promiscuous mode to work around bugs of some
      switches encapsulating LLDP frames inside 802.1Q frames.
    + JSON support for lldpcli can use json-c instead of jansson,
      thanks to Michel Stam.
  * Fix:
    + Fix checksum computation for Cisco CDP.
    + Fix ability to disable LLDP.
    + Fix seccomp sandbox, thanks to Patrick McLean.

lldpd (0.7.9)
  * Changes:
    + Default location for chroot, socket and PID are now configurable
      in `./configure`. The default location is based on the value of
      `runstatedir` which in turn may be based on the value of
      `localstatedir` which defaults to `/usr/local/var`. Therefore,
      to get the previous locations, lldpd should be configured with
      `./configure --localstatedir=/var`.
  * Fixes:
    + Fix `configure system bond-slave-src-mac-type local`. Also use
      it as default.
  * Features:
    + Add support for shutdown LLDPU.
    + Ability to configure IP management pattern from lldpcli.
    + Ability to choose what port ID should be (MAC or interface name).

lldpd (0.7.8)
  * Fixes:
    + Don't hard-code default values for system name, system
      description and port description. When the field is not present,
      just don't display it.
    + Fix lldpcli behaviour when suid.
    + On OSX, don't use p2p0 interfaces: it would break WLAN.
    + Fix SNMP support on RHEL.
  * Features:
    + Android support